--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,3 +3,5 @@ include:
     ref: main
     file: 
       - 'pipelines/terraform.yml'
+variables:
+  GITLAB_TF_ADDRESS: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${CI_PROJECT_NAME}/${CI_COMMIT_REF_NAME}
